--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -47,141 +47,171 @@ table {
 	border-spacing: 0;
 }
 
-
 *, *::after, *::before {
     text-decoration: none;
 }
 
 body {
-    font-family: "SF Pro Text", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 300;
+    font-family: Roboto, "Microsoft JhengHei", "Helvetica Neue", Arial, sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    font-style: italic;
+    text-align: center;
 }
 
 img{
     vertical-align: middle;
 }
 
-.container{
-    width: 1200px;
-    margin: 0 auto;
+/* font */
+.fz-80{
+    font-size: 80px;
+    line-height: 106px;
 }
-
-.block{
-    margin: 0 auto;
-    text-align: center;
+.fz-64{
+    font-size: 64px;
+    line-height: 84px;
 }
-
-.bc-blue{
-    background-color: #415165;
-    padding-top: 24px;
-    padding-bottom: 40px;
-}
-
-.c-red{
-    color: #A00404;
-}
-
-.c-white{
-    color: white;
-}
-
-.fz-32{
-    font-size: 32px;
-}
-
 .fz-24{
     font-size: 24px;
 }
-
 .fz-20{
     font-size: 20px;
 }
-
-.fw-m{
-    font-weight: 600;
+.fw-b{
+    font-weight: 700;
 }
-
-.bd{
-    padding-bottom: 7px;
-    border-bottom: 1px solid #000;
+.lh-42{
+    line-height: 42px;
 }
-
-.bd-white{
-    width: 996px;
-    padding-bottom: 7px;
-    border-bottom: 1px solid white;
+.lh-36{
+    line-height: 36px;
 }
-
-.mb-8{
-    margin-bottom: 8px;
+.lh-30{
+    line-height: 30px;
 }
-
-.mb-16{
-    margin-bottom: 16px;
+.secondary{
+    color: #fff;
 }
-
-.mb-24{
-    margin-bottom: 24px;
+/* margin */
+.mb-144{
+    margin-bottom: 144px;
 }
-
+.mb-68{
+    margin-bottom: 68px;
+}
+.mb-60{
+    margin-bottom: 60px;
+}
+.mb-56{
+    margin-bottom: 56px;
+}
 .mb-40{
     margin-bottom: 40px;
 }
-
-.mb-48{
-    margin-bottom: 48px;
+.mb-32{
+    margin-bottom: 32px;
+}
+.mb-24{
+    margin-bottom: 24px;
+}
+.mb-28{
+    margin-bottom: 28px;
+}
+.mb-20{
+    margin-bottom: 20px;
+}
+.mb-16{
+    margin-bottom: 16px;
+}
+.mb-12{
+    margin-bottom: 12px;
+}
+.mb-8{
+    margin-bottom: 8px;
+}
+.mb-4{
+    margin-bottom: 4px;
+}
+.mr-24{
+    margin-right: 24px;
 }
 
-.mb-64{
-    margin-bottom: 64px;
-}
-
-.mb-80{
-    margin-bottom: 80px;
-}
-
-.name{
-    font-size: 80px;
-    font-weight: 400;
-    line-height: 95px;
-    padding-top: 40px;
-    padding-bottom: 22px;
-    border-bottom: 2px solid #000;
-}
-
-.photo{
-    width: 324px;
-}
-
-.skill-list{
-    width: 200px;
+.wrap{
     margin: 0 auto;
-    border-left: 1px solid white;
-    padding-left: 23px;
 }
 
-.work-list{
-    margin-left: 24px;
-    padding-left: 24px;
-    border-left: 1px solid #96A9C4;
-}
-.w-642{
-    width: 642px;
-}
-
-.contact-info{
-    width: 530px;
-    margin: 0 auto;
-    text-align: center;
+.header{
+    background: url(img/banner.png);
+    background-size: cover;
+    background-position: center center;
+    padding: 308px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.icon {
-    width: 530px;
-    margin: 0 auto;
-    text-align: center;
+.slogan{
+    width: 304px;
+    text-align: left;
 }
 
-.icon img{
-    margin-left: 24px;
+.potorfolio{
+    display: flex;
+    justify-content: space-between;
+}
+.potorfolio a:hover{
+    filter: brightness(140%);
+}
+
+.workExp{
+    width: 384px;
+    border-top: 1px solid #000;
+    padding-top: 28px;
+}
+
+.workExp li::before{
+    display: inline-block;
+    margin-right: 16px;
+    content: "";
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    background-color: #891818;
+    vertical-align: middle;
+}
+
+.myBrand{
+    background-color: #000;
+    border-bottom: 1px solid #707070;
+    padding: 56px 0 160px 0;
+}
+
+.brandImg{
+    width: 1200px;
+    display: flex;
+    flex-wrap: wrap;    
+    justify-content: center;
+}
+
+.workList{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.workItem{
+    margin: 0 24px 48px 0;
+}
+
+.workItem:hover{
+    filter: contrast(60%);
+}
+.contact{
+    background-color: #000;
+    padding: 64px 0;
+}
+
+.contactMethod:hover{
+    color: #891818;
 }
