--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -52,7 +52,7 @@ table {
 }
 
 body {
-    font-family: Roboto, "Microsoft JhengHei", "Helvetica Neue", Arial, sans-serif;
+    font-family: "Roboto", "Microsoft JhengHei", "Helvetica Neue", Arial, sans-serif;
     font-size: 24px;
     font-weight: 500;
     font-style: italic;
@@ -142,7 +142,7 @@ img{
 }
 
 .header{
-    background: url(img/banner.png);
+    background: url(assets/images/banner.png);
     background-size: cover;
     background-position: center center;
     padding: 308px 0;
