--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -142,7 +142,7 @@ img{
 }
 
 .header{
-    background: url(banner.png);
+    background: url(../images/banner.png);
     background-size: cover;
     background-position: center center;
     padding: 308px 0;
